# stub3

./: Anchor.toml
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/create-poap/: page.tsx
app/src/app/mint-poap/[nft-address]/: page.tsx
app/src/app/nft-listing/: layout.tsx  page.tsx
app/src/app/royalty-registration/: layout.tsx  page.tsx
app/src/app/ticket-listing/: page.tsx
app/src/components/: event-carousel.tsx  footer.tsx  mint-poap.tsx  nav.tsx  nft-listing.tsx  poap-creation.tsx  royalty-registration.tsx  trending-events.tsx  upcoming-events.tsx  wallet-provider.tsx
programs/stub3/: Cargo.toml
programs/stub3/src/: errors.rs  lib.rs  utils.rs
programs/stub3/src/instructions/: initialize_market.rs  list_ticket.rs  mod.rs  purchase_ticket.rs  register_royalty_recipient.rs  update_royalty_recipient.rs  withdraw_royalties.rs
programs/stub3/src/state/: market.rs  mod.rs  royalty_recipient.rs  ticket_listing.rs
tests/: stub3.ts
