[package]
name = "stub3"
version = "0.1.0"
description = "Decentralised Secondary Ticket Sales Platform"
authors = ["Generalist <hello@generalist.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stub3"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.30.1", features = ["token", "associated_token"]}
solana-program = "1.17.16"
mpl-token-metadata = "4.1.2"
mpl-token-auth-rules = { version = "1.2.0", features = ["no-entrypoint"] }
thiserror = "1.0"
arrayref = "0.3.6"

[dev-dependencies]
anchor-client = "0.30.1"
rmp-serde = "1.1.1"
shellexpand = "3.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
solana-program-test = "1.17.16"
solana-sdk = "1.17.16"
env_logger = "0.11.5"

